feat :: main add

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -66,3 +66,10 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+input {
+  padding: 12px 16px;
+  border: none;
+  border-radius: 12px;
+  background-color: #f9f9f9;
+}
